# hyrebet

./: .gitignore  .testenv  Cargo.toml  README.md  benchmark.sh  build-dev.sh  build.sh
api/: Cargo.toml  diesel.toml
api/migrations/2025-11-06-133547-0000_create_posts/: up.sql
api/src/: current_schema.rs  database.rs  lib.rs  routes.rs  schema.rs
api/src/routes/: data.rs  media.rs
api/templates/: index.html
api/templates/auth/: login.html  register.html
api/templates/data/: full_post.html  home.html  like_button.html  post.html  profile.html  reply.html  repost.html
auth/: Cargo.toml
auth/src/: hash.rs  lib.rs  main.rs  routes.rs  session.rs
common/: Cargo.toml  diesel.toml
common/migrations/2025-11-01-133345-0000_create_users/: up.sql
common/src/: crypto.rs  current_schema.rs  database.rs  env.rs  lib.rs  middleware.rs  schema.rs  server.rs  session.rs
hybet/: Cargo.toml
hybet/src/: main.rs
restless/: README.md  index.html  package-lock.json  package.json  vite.config.ts
restless/src/: App.vue  FullpostView.vue  HomeView.vue  LoginView.vue  NavBar.vue  Navbar.vue  NavbarComp.vue  NavbarComponent.vue  PostComponent.vue  ProfileView.vue  RegisterView.vue  main.ts  post.ts  router.ts
src/: main.rs  test.rs
src/test/: crypto.rs  env.rs
static-fs/: Cargo.toml  diesel.toml
static-fs/migrations/2025-11-06-123142-0000_create_table/: down.sql
static-fs/migrations/2025-11-10-134626-0000_create_files/: up.sql
static-fs/src/: current_schema.rs  database.rs  main.rs  schema.rs
static/css/: main.css
static/js/: file.js  home.js  login.js  post.js  register.js
test-results/: 5m-home-json-rl.txt  5m-home-rf.txt  5m-home-rl.txt  5m-login-rf.txt  5m-login-rl.txt  5m-post-json-rl.txt  5m-post-rf.txt  5m-post-rl.txt  5m-profile-json-rl.txt  5m-profile-rf.txt  5m-profile-rl.txt  5m-register-rf.txt  5m-register-rl.txt  LCP.txt
vue-launcher/: Cargo.toml
