[package]
name = "hyrebet"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "common"}

askama = "0.14.0"
chrono = "0.4.42"
colored = "3.0.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
jsonwebtoken = "9.3.1"
libsqlite3-sys = { version ="0.35.0", features = ["bundled"] }
ntex = {version = "2.16.0", features = ["tokio"]}
ntex-session = "2.0.0"
r2d2 = "0.8.10"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
ctrlc = "3.5.0"

[profile.dev]
lto=false
codegen-units = 2
