[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]

common = {path = "../common"}
askama = "0.14.0"
ntex = {version = "2.16.0", features = ["tokio", "cookie"]}
ntex-session = "2.0.0"
serde = "1.0.219"
serde_json = "1.0.143"
diesel = {version = "2.2.0", features = ["postgres", "chrono"]}
rand = "0.9.2"
diesel_migrations = {version = "2.3.0", features = ["postgres"]}
