[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]

common = {path = "../common"}
ntex = {version = "2.16.0", features = ["tokio", "cookie"]}
ntex-session = "2.0.0"
chrono = "0.4.42"
rand = "0.9.2"
cookie = "0.18.1"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
