[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"
ntex = {version = "2.16.0", features = ["tokio"]}
ntex-session = "2.0.0"
r2d2 = "0.8.10"
serde = "1.0.228"
diesel = {version = "2.2.0", features = ["postgres", "chrono"]}
chrono = "0.4.42"
jsonwebtoken = "9.3.1"
