[package]
name = "static-fs"
version = "0.1.0"
edition = "2024"

[dependencies]

common = {path = "../common"}
ntex = {version = "2.16.0", features = ["tokio"]}
ntex-session = "2.0.0"
ntex-files = "2.1.0"
diesel = {version = "2.2.0", features = ["postgres", "chrono"]}
rand = "0.9.2"
diesel_migrations = {version = "2.3.0", features = ["postgres"]}
ntex-cors = "2.1.0"
